[gd_scene load_steps=16 format=3 uid="uid://bbnleaylhq6id"]

[ext_resource type="Script" path="res://src/ui/LobbyMenu.gd" id="1_g67vl"]
[ext_resource type="PackedScene" uid="uid://govhpsie1w5w" path="res://data/scene/ui/PlayerList.tscn" id="2_ccclb"]
[ext_resource type="Script" path="res://src/ui/DynamicButton.gd" id="3_12bh6"]
[ext_resource type="PackedScene" uid="uid://dudk6o40fwhnj" path="res://data/scene/ui/LeaveButton.tscn" id="3_mq461"]
[ext_resource type="Script" path="res://src/ui/DynamicLabel.gd" id="4_hxj3e"]
[ext_resource type="FontFile" uid="uid://d3edp6w16f4ut" path="res://data/font/Arvo-BoldItalic.ttf" id="6_d82fo"]
[ext_resource type="Texture2D" uid="uid://ky3jakyprfxp" path="res://data/scene/Frozen Field/icon.png" id="7_a6ubg"]
[ext_resource type="Script" path="res://src/ui/VoteButton.gd" id="7_g2sq4"]
[ext_resource type="Texture2D" uid="uid://d4kbtmpmfjghf" path="res://data/scene/Calm Creek/icon.png" id="8_u6abg"]
[ext_resource type="Texture2D" uid="uid://c0fgnl45q8eyn" path="res://data/scene/Floaty/icon.png" id="9_0arsf"]
[ext_resource type="Texture2D" uid="uid://cb74dvt3y82w7" path="res://data/scene/Frozen Field/icon_bw.png" id="9_i2yx3"]
[ext_resource type="Texture2D" uid="uid://m5t0j0fc5t1t" path="res://data/scene/Calm Creek/icon_bw.png" id="10_wf7vs"]
[ext_resource type="Texture2D" uid="uid://guvme3mgghoc" path="res://data/scene/Floaty/icon_bw.png" id="12_2ryhx"]
[ext_resource type="Texture2D" uid="uid://bp4dfp55gig1h" path="res://data/scene/Warp/icon.png" id="14_kmdrq"]
[ext_resource type="Texture2D" uid="uid://8wsbnq88s3il" path="res://data/scene/Warp/icon_bw.png" id="15_2d1ih"]

[node name="LobbyMenu" type="CanvasLayer"]
script = ExtResource("1_g67vl")

[node name="SettingsMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -198.5
offset_right = -82.0
offset_bottom = 198.5
grow_horizontal = 2
grow_vertical = 2

[node name="DynamicLabel" type="Label" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "Lobby"
script = ExtResource("4_hxj3e")
json_text = "ui/lobby"

[node name="Spacer" type="Control" parent="SettingsMenu"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="WinCondition" type="Button" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Type:"
script = ExtResource("3_12bh6")
grab_initial_focus = true

[node name="Time" type="Button" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Game Time: 12 minutes"

[node name="Spacer2" type="Control" parent="SettingsMenu"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Spacer3" type="Control" parent="SettingsMenu"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 3

[node name="Start" type="Button" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start (host)"

[node name="PlayerMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 84.0
offset_top = -198.5
offset_right = 392.0
offset_bottom = 198.5
grow_horizontal = 2
grow_vertical = 2

[node name="DynamicLabel" type="Label" parent="PlayerMenu"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "Participants"
script = ExtResource("4_hxj3e")
json_text = "ui/participants"

[node name="Spacer2" type="Control" parent="PlayerMenu"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BalanceTeams" type="Button" parent="PlayerMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Balance Teams"

[node name="ChangeTeam" type="Button" parent="PlayerMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Change Team"

[node name="PlayerList" parent="PlayerMenu" instance=ExtResource("2_ccclb")]
layout_mode = 2
size_flags_vertical = 3

[node name="LeaveButton" parent="PlayerMenu" instance=ExtResource("3_mq461")]
layout_mode = 2
json_text = "ui/leave"

[node name="PreGameMenu" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = -198.5
offset_right = 154.0
offset_bottom = 198.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MapVoteLabel" type="Label" parent="PreGameMenu"]
layout_mode = 2
size_flags_horizontal = 0
text = "Map Vote"
script = ExtResource("4_hxj3e")
json_text = "ui/map_vote"

[node name="Spacer5" type="Control" parent="PreGameMenu"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="Maps" type="HBoxContainer" parent="PreGameMenu"]
layout_mode = 2

[node name="0" type="TextureButton" parent="PreGameMenu/Maps"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("7_a6ubg")
texture_disabled = ExtResource("9_i2yx3")
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("7_g2sq4")
excluded_modes = Array[int]([1, 2])

[node name="Name" type="Label" parent="PreGameMenu/Maps/0"]
layout_mode = 0
offset_left = 18.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 30.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Frozen Field"

[node name="VoteCount" type="Label" parent="PreGameMenu/Maps/0"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -30.0
offset_right = 98.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_d82fo")
theme_override_font_sizes/font_size = 72
text = "0"

[node name="1" type="TextureButton" parent="PreGameMenu/Maps"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("8_u6abg")
texture_disabled = ExtResource("10_wf7vs")
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("7_g2sq4")
excluded_modes = Array[int]([3])

[node name="Name" type="Label" parent="PreGameMenu/Maps/1"]
layout_mode = 0
offset_left = 18.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 30.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Calm Creek"

[node name="VoteCount" type="Label" parent="PreGameMenu/Maps/1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -30.0
offset_right = 98.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_d82fo")
theme_override_font_sizes/font_size = 72
text = "0"

[node name="2" type="TextureButton" parent="PreGameMenu/Maps"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("9_0arsf")
texture_disabled = ExtResource("12_2ryhx")
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("7_g2sq4")
excluded_modes = Array[int]([0])

[node name="Name" type="Label" parent="PreGameMenu/Maps/2"]
layout_mode = 0
offset_left = 18.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 30.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Floaty"

[node name="VoteCount" type="Label" parent="PreGameMenu/Maps/2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -30.0
offset_right = 98.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_d82fo")
theme_override_font_sizes/font_size = 72
text = "0"

[node name="3" type="TextureButton" parent="PreGameMenu/Maps"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
texture_normal = ExtResource("14_kmdrq")
texture_disabled = ExtResource("15_2d1ih")
ignore_texture_size = true
stretch_mode = 6
script = ExtResource("7_g2sq4")
excluded_modes = Array[int]([0])

[node name="Name" type="Label" parent="PreGameMenu/Maps/3"]
layout_mode = 0
offset_left = 18.0
offset_top = 14.0
offset_right = 98.0
offset_bottom = 30.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "Warp"

[node name="VoteCount" type="Label" parent="PreGameMenu/Maps/3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -30.0
offset_right = 98.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_d82fo")
theme_override_font_sizes/font_size = 72
text = "0"

[node name="Spacer4" type="Control" parent="PreGameMenu"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
